# jv2

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.md  changeversion  flake.nix  httprequestworker.cpp  httprequestworker.h  isisTest.py  jsontablemodel.cpp  jsontablemodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup.cfg  version.h
.azure-pipelines/: continuous.yml  pr.yml
.azure-pipelines/templates/: linuxBuild.yml  newLinuxBuild.yml  newLinuxPackage.yml  osxBuild.yml  osxPackage.yml  windowsBuild.yml  windowsPackage.yml
.github/workflows/: cache.yml  cichecks.yml  continuous.yml  pr.yml  release.yml  singularity.yml
.github/workflows/get-version/: action.yml
.github/workflows/package/: action.yml
.github/workflows/package/linux/: action.yml
.github/workflows/package/osx/: action.yml
.github/workflows/package/windows/: action.yml
.github/workflows/publish/: action.yml
.github/workflows/qc/: action.yml
.github/workflows/set-environment/: action.yml
.github/workflows/setup/: action.yml
.github/workflows/test/: action.yml
.github/workflows/update-release-info/: action.yml
Doc/Pages/: 1.intro.md  5.plotting.md
backend/: __main__.py  conftest.py  isisInternal.py  launch.py  nexusInteraction.py  pain.py  pyproject.toml  pyproject.toml.win  setup.cfg  test.py
backend/data/: journal_20_2.xml  journal_21_1.xml  journal_main.xml
backend/jv2/: __init__.py  app.py
backend/jv2/classes/: collection.py  journal.py  requestData.py
backend/jv2/main/: generator.py  library.py  selector.py
backend/jv2/routes/: generate.py  journal.py  nexus.py  server.py
backend/jv2/tests/: test_journal.py  test_journalCollection.py  test_networkJournals.py  test_nexus.py  test_requestData.py  test_runRange.py  test_utils.py
backend/src/jv2backend/: __init__.py  __main__.py  app.py  config.py  cycle.py  experiment.py  generateRoutes.py  generator.py  instrument.py  integerRange.py  isisInternal.py  journal.py  journalClasses.py  journalCollection.py  journalFile.py  journalFileList.py  journalLibrary.py  journalRoutes.py  journalfilelist.py  journalroutes.py  journals.py  nexusInteraction.py  nexusRoutes.py  nexusroutes.py  requestData.py  routes.py  run.py  select.py  serverRoutes.py  userCache.py  utils.py
backend/src/jv2backend/classes/: collection.py  integerRange.py  journal.py  requestData.py
backend/src/jv2backend/io/: isisjournalreader.py  journalGenerator.py  journalLocator.py  journalReader.py  journalServer.py  journalreader.py  journalserver.py  nexus.py  runDataFileLocator.py  rundatafilelocator.py
backend/src/jv2backend/io/isis/: daaasdatafilelocator.py  fileLocator.py  filelocator.py  isisJournalServer.py  isisjournalserver.py  urlbuilder.py  xmlJournalReader.py  xmljournallistreader.py  xmljournalreader.py
backend/src/jv2backend/io/journals/: locator.py  networkLocator.py  xmlJournalReader.py
backend/src/jv2backend/io/tests/: test_daaasdatafilelocator.py  test_fileLocator.py  test_filelocator.py  test_isisJournalServer.py  test_isisXMLJournalReader.py  test_isisjournalreader.py  test_isisjournalserver.py  test_isisxmljournallistreader.py  test_isisxmljournalreader.py  test_nexus.py
backend/src/jv2backend/main/: generator.py  library.py  nexus.py  selector.py  userCache.py
backend/src/jv2backend/routes/: acquisition.py  generate.py  journal.py  nexus.py  server.py
backend/src/jv2backend/tests/: test_app.py  test_cycle.py  test_experiment.py  test_instrument.py  test_journal.py  test_journalCollection.py  test_journalData.py  test_journalFile.py  test_journalFileList.py  test_journalfilelist.py  test_networkJournals.py  test_nexus.py  test_requestData.py  test_run.py  test_runRange.py  test_utils.py
backend/src/jv2backend/tests/data/: simpleRunData1.xml  simpleRunData2.xml
backend/src/jv2backend/tests/data/fake_server/: journal_20_2.xml  journal_21_1.xml  journal_main.xml
ci/appimage/: com.projectaten.jv2.appdata.xml  qt.conf
ci/windows/: jv2.iss
cmake/Modules/: FindQt6.cmake
extra/: instrumentData.xml  tableConfig.xml
frontend/: CMakeLists.txt  CMakePresets.json  args.cpp  args.h  backend.cpp  backend.h  chartView.cpp  chartView.h  chartview.cpp  chartview.h  data.cpp  dataGathering.cpp  dataSource.cpp  dataSource.h  dataSources.cpp  datagathering.cpp  errorHandling.cpp  export.cpp  filtering.cpp  finding.cpp  generation.cpp  genericTreeModel.cpp  genericTreeModel.h  graphWidget.cpp  graphWidget.h  graphWidget.ui  graphwidget.cpp  graphwidget.h  graphwidget.ui  httpRequestWorker.cpp  httpRequestWorker.h  httprequestworker.cpp  httprequestworker.h  icons.qrc  instrument.cpp  instrument.h  instrumentModel.cpp  instrumentModel.h  instruments.cpp  journal.cpp  (+53 more)
frontend/cmake/Modules/: conan-jv2.cmake
frontend/data/: defaultColumns.xml  instruments.xml  sources.xml
frontend/src/: CMakeLists.txt  args.h  backend.cpp  backend.h  chartView.cpp  chartView.h  chartview.cpp  chartview.h  dataGathering.cpp  datagathering.cpp  filtering.cpp  graphWidget.cpp  graphWidget.h  graphwidget.cpp  graphwidget.h  httpRequestWorker.cpp  httpRequestWorker.h  httprequestworker.cpp  httprequestworker.h  icons.qrc  jsonTableFilterProxy.cpp  jsonTableFilterProxy.h  jsonTableModel.cpp  jsonTableModel.h  jsontablemodel.cpp  jsontablemodel.h  main.cpp  mainWindow.cpp  mainWindow.h  mainwindow.cpp  mainwindow.h  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  nexusInteraction.cpp  platformInit.cpp  platforminit.cpp  searching.cpp  version.h
jv2backend/: __main__.py  app.py  pyproject.toml  setup.cfg
jv2backend/classes/: collection.py  journal.py  requestData.py
jv2backend/main/: generator.py  selector.py
jv2backend/routes/: generate.py  server.py
jv2backend/tests/: test_networkJournals.py  test_nexus.py  test_requestData.py
jv2backend/tests/data/fake_server/: ALF85423.nxs
nix/: icu.nix  qt6.nix  qtcharts.nix
nix/qt/: srcs.nix
scripts/linux/: jv2-build.def  jv2.def  setup-for-development-ubuntu.sh
