[metadata]
name = jv2backend
version = 0.1.0
description = Backend for Journal Viewer 2

[options]
packages = find:
package_dir =
    = jv2backend
zip_safe = False
requires_python = >=3.8
install_requires =
    flask
    h5py
    lxml
    numpy
    platformdirs
    requests

[options.extras_require]
dev =
    black
test =
    coverage
    pyfakefs
    pytest
    requests-mock

[options.packages.find]
where = jv2backend

[options.entry_points]
console_scripts =
    jv2backend = jv2backend:app.main
