[project]
name = "jv2backend"
version = "1.2.0"
description = "Backend for Journal Viewer 2"
dependencies = [
    "h5py", "requests", "lxml", "flask", "platformdirs",
    "gunicorn", "waitress",
    "pytest", "requests-mock"
]
requires-python = ">=3.10"

[project.scripts]
jv2backend = "jv2backend.app:go"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = "condaenv"
