[metadata]
name = jv2backend
version = 0.1.0
description = Backend for Journal Viewer 2

[options]
packages = find:
package_dir =
    = src
zip_safe = False
requires_python = >=3.8
install_requires =
    flask
    h5py
    pandas
    requests

[options.extras_require]
dev =
    black
test =
    coverage
    pytest
    requests-mock

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jv2backend_old = jv2backend:isisInternal.main
    jv2backend = jv2backend:app.main
